--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "https://AchiUgulava.github.io/robo-app",
+  "homepage": "https://AchiUgulava.github.io/users-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
